--- a/projetos/index.html
+++ b/projetos/index.html
@@ -2,6 +2,29 @@
 <html>
     <head>
         <title>Curso de Lógia</title>
-        <script src="operacoes-logicas.js"></script>
+<!--        <script src="primeiro.js"></script>-->
+<!--        <script src="operacoes-logicas.js"></script>-->
+<!--        <script src="input-output.js"></script>-->
+<!--        <script src="estrutura-controle.js"></script>-->
+<!--        <script src="estrutura-controle.js"></script>-->
+<!--        <script src="operadores-aritmeticos.js"></script>-->
+<!--        <script src="operadores-relacionais.js"></script>-->
+<!--        <script src="estrutura-senao-calculo.js"></script>-->
     </head>
+    <body>
+        Resultado: <p id="paragrafo"></p>
+        <button onclick="calcular()">Calcular</button>
+        <button onclick="fatorial()">Fatorial</button> <!-- pega do arquivo estrutura_para_faca -->
+        <button onclick="verificarIdade()">Maioridade</button> <!-- pega do arquivo concatenação -->
+        <button onclick="repitaAte()">Repetir Função</button> <!-- pega do arquivo concatenação -->
+        <button onclick="zerar()">Zerar</button> <!-- pega do arquivo concatenação -->
+
+
+
+    </body>
+
+    <script src="switch_case.js"></script>
+    <script src="concatenacao.js"></script>
+    <script src="estrutura_para_faca.js"></script>
+    <script src="estrutura_repita.js"></script>
 </html>
