Organização dos arquivos e git

--- a/projetos/index.html
+++ b/projetos/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Curso de Lógia</title>
-<!--        <script src="primeiro.js"></script>-->
-<!--        <script src="operacoes-logicas.js"></script>-->
-<!--        <script src="input-output.js"></script>-->
-<!--        <script src="estrutura-controle.js"></script>-->
-<!--        <script src="estrutura-controle.js"></script>-->
-<!--        <script src="operadores-aritmeticos.js"></script>-->
-<!--        <script src="operadores-relacionais.js"></script>-->
-<!--        <script src="estrutura-senao-calculo.js"></script>-->
+<!--        <script src="js/primeiro.js"></script>-->
+<!--        <script src="js/operacoes-logicas.js"></script>-->
+<!--        <script src="js/input-output.js"></script>-->
+<!--        <script src="js/estrutura-controle.js"></script>-->
+<!--        <script src="js/estrutura-controle.js"></script>-->
+<!--        <script src="js/operadores-aritmeticos.js"></script>-->
+<!--        <script src="js/operadores-relacionais.js"></script>-->
+<!--        <script src="js/estrutura-senao-calculo.js"></script>-->
     </head>
     <body>
         Resultado: <p id="paragrafo"></p>
@@ -23,8 +23,9 @@
 
     </body>
 
-    <script src="switch_case.js"></script>
-    <script src="concatenacao.js"></script>
-    <script src="estrutura_para_faca.js"></script>
-    <script src="estrutura_repita.js"></script>
+    <script src="js/switch_case.js"></script>
+    <script src="js/concatenacao.js"></script>
+    <script src="js/estrutura_para_faca.js"></script>
+    <script src="js/estrutura_repita.js"></script>
+    <script src="js/estrutura-enquanto.js"></script>
 </html>
